<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".activity_main">

        <TextView
            android:id="@+id/text_show_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/show_date"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/switch_show_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="60dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/text_show_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:text="@string/show_seconds"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/switch_show_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="120dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/text_show_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="140dp"
            android:text="@string/show_24h"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />


        <Switch
            android:id="@+id/switch_show_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="20dp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="180dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/text_show_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:text="@string/show_battery"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/switch_show_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="240dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="260dp"
            android:text="@string/night_mode"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/switch_night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="20dp" />


        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="300dp"
            android:background="?android:attr/listDivider" />



        <TextView
            android:id="@+id/warning1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="320dp"
            android:text="@string/warning1"
            android:textColor="#FF0000"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>
</ScrollView>